# isr_planning

./: README.md  repository.debs  repository.rosinstall
isr_knowledge_base/: CMakeLists.txt  package.xml  setup.py
isr_knowledge_base/ros/doc/: README.md
isr_knowledge_base/ros/launch/: knowledge_base_analyzer.launch  rosplan_knowledge_base_example.launch  upload_pddl_knowledge_example.launch
isr_knowledge_base/ros/scripts/: knowledge_base_analyzer  upload_pddl_knowledge_node
isr_knowledge_base/ros/src/isr_knowledge_base_ros/: knowledge_base_analyzer.py  update_knowledge_utils.py  upload_knowledge.py
isr_plan_execution/mbot_planner_executor/: setup.py
isr_plan_execution/mir_planner_executor/: package.xml
isr_plan_execution/mir_planner_executor/ros/scripts/: planner_executor.py
isr_plan_execution/parse_dispatch_msgs/: CMakeLists.txt
isr_planning/: CMakeLists.txt  package.xml
isr_planning_examples/kuka_youbot_robot/mir_yb_actions/mir_compute_shift_relative_distances/: package.xml
isr_planning_examples/mbot_action_msgs/: CMakeLists.txt  package.xml
isr_planning_examples/mbot_action_msgs/action/: Explain.action  Place.action
isr_planning_examples/mbot_actions/: setup.py
isr_planning_examples/mbot_knowledge/: CMakeLists.txt
isr_planning_examples/monarch_robot/mbot_actions/: CMakeLists.txt  package.xml
isr_planning_examples/monarch_robot/mbot_actions/ros/config/: mbot_manipulation_params.yaml  robot_actions.yaml
isr_planning_examples/monarch_robot/mbot_actions/ros/scripts/: explain_client_test_node  explain_server_node  perceive_location_client_test_node  place_server_node
isr_planning_examples/monarch_robot/mbot_actions/ros/src/mbot_actions_ros/: explain_server.py  move_base_safe_client_test.py  move_base_safe_server.py  pick_object_client_test.py
isr_planning_examples/monarch_robot/mbot_knowledge/: package.xml
isr_planning_examples/monarch_robot/mbot_knowledge/common/pddl/storing_groceries/problems/: minimum_required_facts1.pddl
isr_planning_examples/robocup_at_work/mir_yb_actions/mir_align_with_object/: CMakeLists.txt  package.xml
isr_planning_examples/robocup_at_work/mir_yb_actions/mir_align_with_object/ros/scripts/: align_with_object_server.py
isr_planning_examples/robocup_at_work/mir_yb_actions/mir_yb_action_msgs/: CMakeLists.txt  package.xml
isr_planning_examples/robocup_at_work/mir_yb_actions/mir_yb_action_msgs/action/: ComputeBaseShift.action  InsertObject.action  PickPlate.action
isr_planning_examples/robocup_at_work/mir_yb_actions/rqt_action_client/: package.xml  plugin.xml
isr_planning_examples/robocup_at_work/mir_yb_actions/rqt_action_client/config/: robot_actions.yaml
isr_planning_examples/robocup_at_work/mir_yb_actions/rqt_action_client/launch/: rqt_action_client.launch
isr_planning_examples/robocup_at_work/mir_yb_actions/rqt_action_client/src/rqt_action_client/: action_client_container_widget.py  action_client_plugin.py
isr_planning_examples/robocup_at_work/mir_yb_actions/rqt_action_client/src/rqt_action_client/resources/: ActionClientWidget.ui
isr_planning_tools/mcr_cost_generators/: package.xml
isr_planning_tools/mcr_cost_generators/ros/config/: example_perception_cost_params.yaml
isr_planning_tools/mcr_cost_generators/ros/doc/: README.md
isr_planning_tools/mcr_cost_generators/ros/include/mcr_cost_generators/: perception_cost_generator_node.h
isr_planning_tools/mcr_cost_generators/ros/launch/: navigation_cost_generator.launch
isr_planning_tools/mcr_cost_generators/ros/src/: navigation_cost_generator_node.cpp
isr_planning_tools/mcr_pddl_problem_generator/: CMakeLists.txt
isr_planning_tools/plan_success_analyzer/: package.xml
knowledge_base/: CMakeLists.txt  package.xml  setup.py
mbot_rosplan/: CMakeLists.txt  package.xml  setup.py
mbot_rosplan/ros/doc/: README.md
pddl_problem_generator/: CMakeLists.txt  package.xml
plan_execution/mbot_planner_executor/: CMakeLists.txt  package.xml
plan_execution/mbot_planner_executor/ros/launch/: planner_executor.launch
plan_execution/mbot_planner_executor/ros/scripts/: mbot_planner_executor
plan_execution/mbot_planner_executor/ros/src/mbot_planner_executor_ros/: mbot_planner_executor.py
plan_execution/mir_planner_executor/: CMakeLists.txt
plan_execution/parse_dispatch_msgs/: package.xml
plan_execution/parse_dispatch_msgs/ros/launch/: dispatch_generator.launch
plan_execution/parse_dispatch_msgs/ros/scripts/: ipc_2014_plan_parser.py
plan_execution/plan_parse_dispatch/: CMakeLists.txt  package.xml  setup.py
plan_execution/plan_parse_dispatch/common/src/plan_parse_dispatch/: plan_parser_utils.py
plan_execution/plan_parse_dispatch/ros/launch/: plan_parse_dispatch.launch
plan_execution/plan_parse_dispatch/ros/scripts/: plan_parse_dispatch_node
plan_execution/plan_parse_dispatch/ros/src/plan_parse_dispatch_ros/: plan_parse_dispatch.py  plan_parse_dispatch_node.py
plan_execution/plan_parse_dispatch/ros/test/: example_plan.plan
plan_execution/planner_executor/: CMakeLists.txt  package.xml  setup.py
planners/mercury_planner/: CMakeLists.txt  package.xml  setup.py
planning_coordinator/mir_planning_core/: CMakeLists.txt  package.xml
planning_examples/kuka_youbot_robot/mir_yb_actions/mir_yb_actions/: CMakeLists.txt  package.xml
planning_tools/intrinsic_knowledge_generator/: CMakeLists.txt  package.xml  setup.py
planning_tools/intrinsic_knowledge_generator/ros/doc/: README.md
planning_tools/intrinsic_knowledge_generator/ros/launch/: intrinsic_knowledge_generator.launch
planning_tools/intrinsic_knowledge_generator/ros/scripts/: intrinsic_knowledge_generator_node
planning_tools/intrinsic_knowledge_generator/ros/src/intrinsic_knowledge_generator_ros/: intrinsic_knowledge_generator_node.py
planning_tools/mcr_cost_generators/: CMakeLists.txt  package.xml
planning_tools/mcr_cost_generators/ros/include/mcr_cost_generators/: navigation_cost_generator_node.h
planning_tools/mcr_cost_generators/ros/launch/: perception_cost_generator.launch
planning_tools/mcr_cost_generators/ros/src/: perception_cost_generator_node.cpp
(+185 files in other folders)
