<?xml version="1.0"?>
<package>
    <name>isr_knowledge_base</name>
    <version>1.0.0</version>
    <description>
        a) Launch files for ROSPlan knowledge base.

            https://github.com/socrob/ROSPlan (fork)
            https://github.com/KCL-Planning/ROSPlan (upstream)

        b) Knowledge base analyzer:
            1. query the knowledge base and tells you if there is pending goals
            2. query the knowledge base and informs if there is new knowledge
    </description>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>rosplan_knowledge_base</run_depend>
    <run_depend>rosplan_rqt</run_depend>
    <run_depend>mongodb_store</run_depend>
    <run_depend>rosplan_knowledge_base</run_depend>

</package>
