<?xml version="1.0"?>
<package>
  <name>mir_planner_executor</name>
  <version>1.0.0</version>
  <description>
    Reads a plan, comming from a planner and executes each action in order.
  </description>

  <license>GPLv3</license>

  <author email="olima_84@yahoo.com">Oscar Lima</author>
  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
