<?xml version="1.0"?>
<package>
  <name>mbot_planner_executor</name>
  <version>1.0.0</version>
  <description>
    Reads a plan, comming from a planner and executes each action in order.
  </description>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
