<?xml version="1.0"?>
<package>
    <name>mbot_knowledge</name>
    <version>1.0.0</version>
    <description>Stores semantic knowledge about the domestic environment in which the robot operates</description>

    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>

    <buildtool_depend>catkin</buildtool_depend>

    <test_depend>roslaunch</test_depend>
</package>

