<?xml version="1.0"?>
<package>
    <name>mir_yb_action_msgs</name>
    <version>1.0.0</version>
    <description>Messages required to communicate with yb actions through action lib</description>
    
    <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>actionlib</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>

</package>
