<?xml version="1.0"?>
<package>
  <name>rqt_action_client</name>
  <version>0.1.0</version>
  <description>This package provides an rqt interface for creating actionlib clients. Clients can be specified in a yaml file</description>
  <maintainer email="santosh.thoduka@gmail.com">Santosh Thoduka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
